Change Hashmap of stock to StockEntrys and more